--- a/css/WORK.css
+++ b/css/WORK.css
@@ -28,7 +28,6 @@
     .work_content{width: 100%;}
 }
 .work_content .work-title{
-    font-size: 4rem;
     font-weight:500;
     margin-bottom: 15px;
     color: var(--head-titles);
@@ -36,7 +35,7 @@
 }
 .work_content .work-title span{font-size: 4rem;display: inline-block;transition: all .5s ease;transition-delay: .3s;}
 @media screen and (max-width:500px) {
-    .work_content .work-title span{font-size: 2em;}
+    .work_content .work-title,.work_content .work-title span{font-size: 1.5rem;}
 }
 .work-slider{
     max-width: calc(var(--quantity)*20em);
