--- a/css/MAIN.css
+++ b/css/MAIN.css
@@ -74,7 +74,6 @@ body{background: var(--Primary-bg);}
     to{transform: translate(-50%,-50%) rotate(360deg);}
 }
 
-
                                     /*! this is the scroll snap css*/
 html{
     scroll-snap-type: y mandatory;
@@ -82,7 +81,7 @@ html{
 }
 .after__header--container{scroll-snap-align: start;scroll-snap-stop: always;}
 .work-bg{scroll-snap-align: start;scroll-snap-stop: always;}
-.contact__section{scroll-snap-align: start;scroll-snap-stop: always;}
+.contact__section{scroll-snap-align: start;scroll-snap-stop: always;scroll-margin-top: 110px;}
 .footer__container{scroll-snap-align: start;scroll-snap-stop: always;}
                                     /*----------HEADER__BORDER---------*/
 
