--- a/css/HEADER.css
+++ b/css/HEADER.css
@@ -120,7 +120,7 @@ display: none;
 display: none;
 }
 @media screen and (max-width:54.125rem){
-  .nav-links,.cursor{display: none;}
+  .nav-links{display: none;}
 
   .head-notch{
     background-color: transparent;
@@ -145,8 +145,9 @@ display: none;
     margin: .5rem .5rem;
     padding: 0.7rem 5%;
     border-radius: 30px;
-    box-shadow: inset 10px -8px 25px  var(--Bxshdw-1), 
-                inset 10px -8px 12px  var(--BXshdw-2);
+    box-shadow: -5px -1px 20px var(--border-2) ,
+              inset 6px 11px 12px var(--border-1), 
+              inset -5px -6px 12px var(--border-2);
   }
 
   .hamburger{
