--- a/css/MAIN.css
+++ b/css/MAIN.css
@@ -45,12 +45,9 @@ html, body {
     scrollbar-width: none;
     -ms-overflow-style: none;
 }
-
 body::-webkit-scrollbar {
     display: none; 
 }
-
-
 ::selection{
     color: var(--Secondary-bg);
     background: var(--light);
@@ -84,6 +81,8 @@ body::-webkit-scrollbar {
     from{transform: translate(-50%,-50%) rotate(0);}
     to{transform: translate(-50%,-50%) rotate(360deg);}
 }
+.fadeOut{filter:blur(3px);opacity: 0;transition:all .5s;transition-delay: calc(var(--AnimDelay,1s)*.2s);}
+.fadeIn{opacity: 1;filter: blur(0px);}
 
                                     /*! this is the scroll snap css*/
 html{
@@ -99,9 +98,7 @@ html{
 header a:hover::after{
     transform: scaleX(0);
 }
-
 p{color: var(--light);}
-
 a{
     text-decoration: none;
     color: var(--light);
@@ -110,7 +107,6 @@ a{
     transition: .5s ease-out;
     scale: 1.05;
 }
-
 a:hover, a:active{
     color: var(--Hover-1);
     transition: .5s ease-out;
@@ -118,7 +114,7 @@ a:hover, a:active{
 }
 .social__icons a:hover,.social__icons a:active,.social__links:hover,.social__links:active{color: var(--color);}
 
-a::after{
+a::after,a::before{
     content:"";
     position: absolute;
     width: 100%;
@@ -132,7 +128,7 @@ a::after{
     transition: transform .5s;
 }
 .social__icons a::after,.social__links::after{background: var(--color);}
-a:hover::after{
+a:hover::after,a:hover::before{
     transform: scaleX(1);
 }
 
