--- a/css/MAIN.css
+++ b/css/MAIN.css
@@ -83,6 +83,11 @@ body::-webkit-scrollbar {
 }
 .fadeOut{filter:blur(3px);opacity: 0;transition:all .5s;transition-delay: calc(var(--AnimDelay,1s)*.2s);}
 .fadeIn{opacity: 1;filter: blur(0px);}
+.slideOut{transform: translate(10px);transition: all .5s;transition-delay :calc(var(--stagAnimDelay,1s)*.2s)}
+.slideIn{transform: translate(0);}
+@media(prefers-reduced-motion){
+    .fadeOut,.slideOut{transition: none;}
+}
 
                                     /*! this is the scroll snap css*/
 html{
