--- a/css/WORK.css
+++ b/css/WORK.css
@@ -57,7 +57,14 @@
     object-position: 50% 50%;
     border-radius: 10px;
     border: 1px solid var(--color-text);
+    transition: all .5s ;
 }
+.work-slider .work-project:not(.proj-activ){filter: grayscale(.6);}
+.work-slider .work-project.proj-active{
+    border: 1px solid var(--head-titles);
+    height: 82%;filter: grayscale(0);
+}
+
 /* work-title transitions and animations */
 .work-title:hover .char{animation: wiggly 2s infinite;}
 @keyframes wiggly {
