--- a/css/WORK.css
+++ b/css/WORK.css
@@ -59,7 +59,7 @@
     border: 1px solid var(--color-text);
     transition: all .5s ;
 }
-.work-slider .work-project:not(.proj-activ){filter: grayscale(.6);}
+.work-slider .work-project:not(.proj-activ){filter: grayscale(.6) blur(2px);}
 .work-slider .work-project.proj-active{
     border: 1px solid var(--head-titles);
     height: 82%;filter: grayscale(0);
